--- a/index.html
+++ b/index.html
@@ -17,5 +17,9 @@
     <script>mocha.setup('bdd');</script>
     <script src="index.js"></script>
     <script src="test/index-test.js"></script>
+
+    <script type="text/javascript">
+      mocha.run()
+    </script>
   </body>
 </html>
